Fix truncate and underline

--- a/packages/frontend/src/styles/style.css
+++ b/packages/frontend/src/styles/style.css
@@ -28,3 +28,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.fake-underline {
+  position: relative;
+}
+
+.fake-underline:after {
+  content: '';
+  position: absolute;
+  bottom: 3px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: currentColor;
+}
